--- a/Decapent.Ledger.Front/package.json
+++ b/Decapent.Ledger.Front/package.json
@@ -12,8 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react-vertical-timeline-component": "^2.5.0",
+    "css-loader": "^3.5.3",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-vertical-timeline-component": "^2.6.2",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1"
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "^3.2.2",
