--- a/Decapent.Ledger.Front/package.json
+++ b/Decapent.Ledger.Front/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/react-vertical-timeline-component": "^2.5.0",
+    "axios": "^0.19.2",
     "css-loader": "^3.5.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
