added database support for SQLServer using Ormlite

--- a/Decapent.Ledger/Decapent.Ledger.Infrastructure/Decapent.Ledger.Infrastructure.csproj
+++ b/Decapent.Ledger/Decapent.Ledger.Infrastructure/Decapent.Ledger.Infrastructure.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="5.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Decapent.Ledger.Domain\Decapent.Ledger.Domain.csproj" />
   </ItemGroup>
 
