--- a/Decapent.Ledger/Decapent.Ledger.Api/Decapent.Ledger.Api.csproj
+++ b/Decapent.Ledger/Decapent.Ledger.Api/Decapent.Ledger.Api.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Nexus.Cqrs" Version="2018.10.11.2" />
+    <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="5.8.0" />
   </ItemGroup>
 
   <ItemGroup>
