--- a/Decapent.Ledger/Decapent.Ledger.Api/appsettings.json
+++ b/Decapent.Ledger/Decapent.Ledger.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=FamilyLedger;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
