--- a/Decapent.Ledger.Front/package.json
+++ b/Decapent.Ledger.Front/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react-router-dom": "^5.1.5",
     "@types/react-vertical-timeline-component": "^2.5.0",
     "axios": "^0.19.2",
     "css-loader": "^3.5.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-vertical-timeline-component": "^2.6.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1"
